[tool.poetry]
name = "snflwrpy"
version = "1.1.0"
description = "Visually demonstrates the function of sorting algorithms using Vogel's Fibonacci model."
authors = ["Macallan Camara <44030647+Macinto5h@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Macinto5h/snflwrpy"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pylint = "^2.13.9"
chancepy = "^0.1.3"
pytest-mock = "^3.9.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "snflwrpy.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
